img location editing

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <i>Frontend Web Developer</i></small
           >
         </h4>
-        <a href="https://www.linkedin.com/in/renata-tukic/"
+        <a href="https://www.linkedin.com/in/renata-tukic/" target="_blank"
           ><img src="/image/icon-852639_640.png" alt="in"
         /></a>
       </footer>
