allow only visitorsquestion

--- a/question.html
+++ b/question.html
@@ -79,8 +79,8 @@
           <h1 class="text-center">I'm in the mood to see your question suggestions!</h1>
           <label for="fields">Chose field:</label>
           <select name="fields" id="fields" class="p-3 rounded" tab="0">
-            <option value="art">Art</option>
-            <option value="science">Science</option>
+            <option value="art" disabled>Art</option>
+            <option value="science" disabled>Science</option>
             <option value="visitor">Visitor questions</option>
           </select>
         </div>
