edited questions and index

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <source src="/video/golden_-_48569 (1080p).mp4" type="video/mp4" />
     </video>
     <div id="desktop">
-      <div class="left rounded">
+      <div class="left rounded" id="left">
         <h3>About me</h3>
         <hr />
         <p class="p-2">
@@ -145,7 +145,7 @@
         <p class="p-2"></p>
       </div>
 
-      <div class="right rounded">
+      <div class="right rounded" id="right">
         <h3>About project</h3>
         <hr />
         <p class="p-2">
