--- a/question.html
+++ b/question.html
@@ -74,7 +74,7 @@
       </nav>
     </header>
     <section>
-      <form class="bg-dark text-white m-3 p-2 border rounded y" id="info">
+      <form class="bg-dark text-white m-3 p-2 border rounded" id="info">
         <div class="row w-75 p-2 m-auto">
           <h1 class="text-center">I'm in the mood to see your question suggestions!</h1>
           <label for="fields">Chose field:</label>
@@ -151,9 +151,10 @@
           <button type="submit" class="btn btn-secondary p-2 m-2 rounded">add</button>
         </div>
       </form>
+      <article></article>
     </section>
-    <article></article>
-    <footer class="bg-dark text-white w-100 p-3 text-center fixed-bottom">
+   
+    <footer class="bg-dark text-white p-3 text-center">
       
       <h4>
         &copy;<small>2023
